# gridshield

./: .clangd  .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  CMakePreset.json  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.ps1  LICENSE  Makefile  README.md  SECURITY.md  build.sh  diagram.json  gridshield.db  gridshield.ino  platformio.ini  result.txt  wokwi.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  release.yml
assets/prompt/: generate_documentation.md
backend/: README.md  requirements.txt  seed.py  test_gridshield.db  test_results.txt
backend/app/: __init__.py  anomaly_engine.py  database.py  export.py  forensics.py  main.py  meters.py  models.py  notification_engine.py  notifications.py  routes.py  schemas.py  webhooks.py
backend/tests/: conftest.py  test_alerts.py  test_anomaly_engine.py  test_export.py  test_forensics.py  test_meters.py  test_notifications.py  test_readings.py  test_webhooks.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CHEATSHEET.md  IDEAS.md  JOBDESK.md  PROPOSAL.md  QUICKSTART.md  RAB.md  ROADMAP.md  SECURE_BOOT.md  SECURITY_AUDIT.md  TECHSTACK.md  THREAT_MODEL.md  requirements.md
docs/MUST_READ/: workflow.md
docs/examples/: README.md  example_crypto.cpp  example_detector.cpp  example_hkdf.cpp  example_packet.cpp  example_system.cpp  example_tamper.cpp
docs/refs/: PROPOSAL GRIDSHIELD.docx  requirements.md
docs/typst/: metadata.typ  proposal.typ
examples/: README.md
examples/arduino/SimpleMeter/: SimpleMeter.ino
examples/native/: demo_native.cpp
firmware/: .clang-format  .clang-tidy  CMakeLists.txt  platformio.ini  sdkconfig  sdkconfig.defaults
firmware/coverage/: CMakeLists.txt  coverage_main.cpp  run_coverage.sh  unity.h  v22_test_runner.cpp  v30_test_runner.cpp
firmware/fuzz/: CMakeLists.txt  README.md  esp_log.h  fuzz_packet_parse.cpp
firmware/include/common/analytics/: detector.hpp  ml_anomaly.hpp  tflite_runner.hpp  time_series.hpp
firmware/include/common/cloud/: aws_iot.hpp  azure_iot.hpp  cloud_connector.hpp  device_provisioning.hpp
firmware/include/common/core/: config_manager.hpp  degradation.hpp  error.hpp  system.hpp  telemetry.hpp  types.hpp  vals.hpp
firmware/include/common/forensics/: alert_dispatcher.hpp  event_logger.hpp  evidence_store.hpp  incident_report.hpp
firmware/include/common/hardware/: sensor_manager.hpp  tamper.hpp
firmware/include/common/hardware/sensors/: acs712.hpp  ds18b20.hpp  mpu6050.hpp  pzem004t.hpp  zmpt101b.hpp
firmware/include/common/network/: coap.hpp  esp_now_mesh.hpp  lora.hpp  modbus.hpp  mqtt.hpp  packet.hpp  remote_config.hpp  retry.hpp  sntp_client.hpp
firmware/include/common/security/: cert_manager.hpp  crypto.hpp  hkdf.hpp  hw_crypto.hpp  key_rotation.hpp  key_storage.hpp
firmware/include/common/system/: ota_manager.hpp  power_manager.hpp
firmware/include/common/utils/: gs_macros.hpp  gs_typetraits.hpp  gs_utils.hpp  memory_pool.hpp  zero_copy_buffer.hpp
firmware/include/platform/: esp32_platform.hpp  mock_platform.hpp  platform.hpp
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  demo_main.cpp
firmware/main/src/analytics/: detector.cpp
firmware/main/src/core/: system.cpp
firmware/main/src/hardware/: tamper.cpp
firmware/main/src/network/: packet.cpp
firmware/main/src/platform/: platform.cpp
firmware/main/src/security/: crypto.cpp  hkdf.cpp
firmware/src/arduino/: main.cpp
firmware/src/common/analytics/: detector.cpp
firmware/src/common/core/: system.cpp
firmware/src/native/: main.cpp
firmware/stubs/machine/: endian.h
firmware/test_app/: CMakeLists.txt
firmware/test_app/.cache/clangd/index/: test_anomaly_detector.cpp.F61F68E121485D84.idx  (+14 more)
firmware/test_app/main/: CMakeLists.txt  test_alert_dispatcher.cpp  test_analytics.cpp  test_anomaly_detector.cpp  test_byte_array.cpp  test_cloud.cpp  test_crypto_engine.cpp  test_degradation.cpp  test_evidence_store.cpp  test_forensics.cpp  test_hkdf.cpp  test_key_rotation.cpp  test_key_storage.cpp  test_main.cpp  test_mqtt.cpp  test_ota_power.cpp  test_performance.cpp  test_protocols.cpp  test_result.cpp  test_retry.cpp  test_secure_packet.cpp  test_sensors.cpp  test_static_buffer.cpp  test_system_integration.cpp  test_tamper_detector.cpp  test_telemetry.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: api.js  main.js  router.js  style.css
frontend/src/components/: chart.js  navbar.js
frontend/src/pages/: alerts.js  anomalies.js  dashboard.js  fleet.js  notifications.js
include/analytics/: detector.hpp
include/arduino/: gpio_arduino.hpp  platform_arduino.hpp
include/common/core/: error.hpp  system.hpp  types.hpp
include/common/hardware/: tamper.hpp
include/common/network/: packet.hpp
include/common/security/: crypto.hpp
include/common/utils/: gs_macros.hpp  gs_utils.hpp
include/core/: error.hpp  system.hpp  types.hpp
include/gridshield/analytics/: detector.hpp
include/gridshield/core/: error.hpp  system.hpp
include/gridshield/hardware/: tamper.hpp
include/gridshield/security/: crypto.hpp
include/hardware/: tamper.hpp
include/native/: Arduino.h  platform_native.hpp
include/network/: packet.hpp
include/platform/: mock_platform.hpp  platform.hpp
include/platform/arduino/: gpio_arduino.hpp  platform_arduino.hpp
include/security/: crypto.hpp
include/utils/: gs_macros.hpp  vector.hpp
reviews/: review_20260220.md
scripts/: fix_compile_commands.py  script.ps1  tool.ps1
scripts/project/: structure.ps1
scripts/proposals/: build.ps1  proposals.typ
src/: gridshield.ino  main.cpp
src/analytics/: detector.cpp
src/arduino/: gridshield.ino  main.ino
src/common/analytics/: detector.cpp
src/common/core/: system.cpp
src/common/hardware/: tamper.cpp
src/common/network/: packet.cpp
src/common/security/: crypto.cpp
src/core/: system.cpp
src/hardware/: tamper.cpp
src/native/: main.cpp
src/network/: packet.cpp
src/platform/: platform.cpp
src/security/: crypto.cpp
test/native/: test_key_storage.cpp  test_security_hardening.cpp
